tests/reference/asr-restriction_error_02-f7cf225.stderr
semantic error: Argument type does not match parameter's restriction
 --> tests/errors/restriction_error_02.py:5:10
  |
5 | def f(x: T) -> T:
  |          ^ Type mismatch
  |
11 | print(f("a"))
  |         ^^^ Type mismatch
